updated html titles

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
  
-{% set active_page = "search" %}
-
-{% block title %} Home {% endblock %}
+{% block title %} Pulsar Survey Scraper {% endblock %}
  
 {% block body %}
  
