--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
- 
+
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+
     <!-- CSS Bootstrap CDN Link -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
  
