--- a/templates/compute.html
+++ b/templates/compute.html
@@ -21,9 +21,20 @@
       <p>
  
           <!-- {{form.coordinates.label}} -->
-<span id="coord-label">α δ</span>{{form.coordinates(size=32)}}
-<input type="checkbox" id="coord-toggle" >
+<span>{{form.coordinates.label|safe}}</span>
+{% if form.lb_or_radec %}
+<span id="coord-label">α δ</span>
+{% else %}
+<span id="coord-label"><i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i></span>
+{% endif %}
+{{form.coordinates(size=32)}}
 {{form.lb_or_radec(class='toggle', **{'data-toggle':"toggle",'data-off':"Galactic", 'data-on':"Equatorial", 'data-onstyle':"success", 'data-offstyle':"primary"})}}
+           {% for error in form.coordinates.errors %}
+          <span style="color:red;">
+ 
+              {{error}}
+          </span>
+          {% endfor %}
 
 <!-- {% for subfield in form.lb_or_radec_selector %} -->
 <!--     <tr> -->
@@ -31,12 +42,6 @@
 <!--         <td>{{ subfield.label }}</td> -->
 <!--     </tr> -->
 <!-- {% endfor %} -->
-<!--            {% for error in form.coordinates.errors %} -->
-<!--           <span style="color:red;"> -->
- 
-<!--               {{error}} -->
-<!--           </span> -->
-<!--           {% endfor %} -->
       </p> 
       <p>
  
