--- a/templates/base.html
+++ b/templates/base.html
@@ -44,22 +44,24 @@ $( document ).ready(function() {
 $('#coord-toggle').change(function() {
 if ($(this).prop('checked')) {
 $('#coord-label').html('α δ');
+$("label[for='coordinates']").html('α δ');
 } else {
 $('#coord-label').html('<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i>');
+$("label[for='coordinates']").html('<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i>');
 }
 <!-- var current_status = $('#coord-status').text(); -->
 var current_status = $(this).prop('checked');
-$.ajax({
-    url: "/get_coordtoggled_status",
-    type: "get",
-     data: {status: current_status},
-     success: function(response) {
-      $("#coord-status").html(response);
-     },
-     error: function(xhr) {
-      //Do Something to handle error
-     }
-   });
+<!-- $.ajax({ -->
+<!--     url: "/get_coordtoggled_status", -->
+<!--     type: "get", -->
+<!--      data: {status: current_status}, -->
+<!--      success: function(response) { -->
+<!--       $("#coord-status").html(response); -->
+<!--      }, -->
+<!--      error: function(xhr) { -->
+<!--       //Do Something to handle error -->
+<!--      } -->
+<!--    }); -->
 });
 });
 </script>
