--- a/templates/compute.html
+++ b/templates/compute.html
@@ -21,7 +21,7 @@
       <p>
  
           <!-- {{form.coordinates.label}} -->
-<span>{{form.coordinates.label|safe}}</span>
+<label for="coordinates">{{form.coordinates.label|safe}}</label>
 {% if form.lb_or_radec %}
 <span id="coord-label">α δ</span>
 {% else %}
