--- a/templates/compute.html
+++ b/templates/compute.html
@@ -18,12 +18,14 @@
     <form action="" method="post" novalidate>
       {{form.csrf_token}}
  
-      <p>
- 
+
 {{form.coordinates(size=32)}}
 {{form.lb_or_radec(class='toggle',
-**{'data-toggle':"toggle",'data-off':'Galactic (<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>', 'data-on':"Equatorial (α δ)", 'data-onstyle':"success", 'data-offstyle':"primary"})}}
-           {% for error in form.coordinates.errors %}
+**{'data-toggle':"toggle",'data-off':'Galactic (<i
+id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
+'data-on':"Equatorial (α δ)", 'data-onstyle':"success",
+'data-offstyle':"primary",'data-width': "20%"})}}
+{% for error in form.coordinates.errors %}
           <span style="color:red;">
  
               {{error}}
@@ -36,27 +38,25 @@
 <!--         <td>{{ subfield.label }}</td> -->
 <!--     </tr> -->
 <!-- {% endfor %} -->
-      </p> 
-      <p>
  
+<br>
+
 {{form.d_or_dm(size=32)}}
 {{form.d_or_dm_selector(class='toggle',
-**{'data-toggle':"toggle",'data-off':"DM (pc/cc)", 'data-on':"Distance (pc)", 'data-onstyle':"success", 'data-offstyle':"primary"})}}
+**{'data-toggle':"toggle",'data-off':"DM (pc/cc)", 'data-on':"Distance (pc)", 'data-onstyle':"success", 'data-offstyle':"primary",'data-width': "20%"})}}
           {% for error in form.d_or_dm.errors %}
           <span style="color:red;">
  
               {{error}}
           </span>
           {% endfor %}
+<br>
 
-      </p>
- 
-      <p>
 {{form.model_selector(class='toggle',
 **{'data-toggle':"toggle",'data-off':"YMW16", 'data-on':"NE2001", 'data-onstyle':"success", 'data-offstyle':"primary"})}}
 
-      </p>
- 
+
+<br><br>
  
         <p>
 <!-- <input type="submit" value="Search" class="btn btn-success"> -->
