removed script; added galactic search to scraper

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,26 +41,26 @@
  
  
  <script>
-$( document ).ready(function() {
-$('#coord-toggle').change(function() {
-if ($(this).prop('checked')) {
-$('#coord-label').html('α δ');
-$("label[for='coordinates']").html('α δ');
-} else {
-$('#coord-label').html('<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i>');
-$("label[for='coordinates']").html('<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i>');
-}
-});
-$('#input-toggle').change(function() {
-if ($(this).prop('checked')) {
-$('#input-label').html('Distance (pc)');
-$("label[for='input']").html('Distance (pc)');
-} else {
-$('#coord-label').html('DM');
-$("label[for='input']").html('DM');
-}
-});
-});
+<!-- $( document ).ready(function() { -->
+<!-- $('#coord-toggle').change(function() { -->
+<!-- if ($(this).prop('checked')) { -->
+<!-- $('#coord-label').html('α δ'); -->
+<!-- $("label[for='coordinates']").html('α δ'); -->
+<!-- } else { -->
+<!-- $('#coord-label').html('<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i>'); -->
+<!-- $("label[for='coordinates']").html('<i id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b</i>'); -->
+<!-- } -->
+<!-- }); -->
+<!-- $('#input-toggle').change(function() { -->
+<!-- if ($(this).prop('checked')) { -->
+<!-- $('#input-label').html('Distance (pc)'); -->
+<!-- $("label[for='input']").html('Distance (pc)'); -->
+<!-- } else { -->
+<!-- $('#coord-label').html('DM'); -->
+<!-- $("label[for='input']").html('DM'); -->
+<!-- } -->
+<!-- }); -->
+<!-- }); -->
 </script>
 
 </body>
