--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,19 @@
     <!-- CSS Bootstrap CDN Link -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+td {
+  padding: 5px;
+}
+th{
+  padding: 2px;
+}
+</style>
  
 </head>
 <body>
