added button styling

--- a/templates/compute.html
+++ b/templates/compute.html
@@ -64,8 +64,8 @@ id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
         <p>
 <!-- <input type="submit" value="Search" class="btn btn-success"> -->
 <!-- <input type="submit" value="API" class="btn btn-success"> -->
-{{ form.compute }}
-{{ form.clear }}
+{{ form.compute(class='button button1') }}
+{{ form.clear(class="button button3") }}
         </p>
  
  
