--- a/templates/search.html
+++ b/templates/search.html
@@ -77,9 +77,9 @@ id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
         <p>
 <!-- <input type="submit" value="Search" class="btn btn-success"> -->
 <!-- <input type="submit" value="API" class="btn btn-success"> -->
-{{ form.search }}
-{{ form.api }}
-{{ form.clear }}
+{{ form.search(class="button button1") }}
+{{ form.api(class="button button2") }}
+{{ form.clear(class="button button3") }}
         </p>
  
  
