added coordinate examples

--- a/templates/compute.html
+++ b/templates/compute.html
@@ -87,8 +87,15 @@ id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
     href="https://ui.adsabs.harvard.edu/abs/2017ApJ...835...29Y/abstract">Yao,
     Manchester and Wang (2017; YMW16)</a> and <a
     href="https://ui.adsabs.harvard.edu/abs/2002astro.ph..7156C/abstract">Cordes
-    and Lazio (2002; NE2001)</a>.
-    </div>
+    and Lazio (2002; NE2001)</a>.<br>
+
+Coordinate conversions done by <a
+href="https://www.astropy.org/">astropy</a>.  Examples:<br>
+<em>123.4 56.7</em>: decimal degrees<br>
+<em>12:34:56 -12:34:56</em>: assumed hours, degrees<br>
+<em>12h34m56s -12d34m56s</em>: explicit units
+
+</div>
 
 {% endblock %}
 
