--- a/templates/search.html
+++ b/templates/search.html
@@ -114,7 +114,15 @@ Surveys:<br>
 </span>
 
 <hr>
-Inspired by <a href="http://hosting.astro.cornell.edu/~deneva/tabscr/tabscr.php">Julia Deneva's Pulsar Survey Scraper</a>
+Inspired by <a
+href="http://hosting.astro.cornell.edu/~deneva/tabscr/tabscr.php">Julia
+Deneva's Pulsar Survey Scraper</a><br>
+
+Coordinate conversions done by <a
+href="https://www.astropy.org/">astropy</a>.  Examples:<br>
+<em>123.4 56.7</em>: decimal degrees<br>
+<em>12:34:56 -12:34:56</em>: assumed hours, degrees<br>
+<em>12h34m56s -12d34m56s</em>: explicit units
 
 </div> 
 
