--- a/templates/search.html
+++ b/templates/search.html
@@ -122,8 +122,8 @@ Coordinate conversions done by <a
 href="https://www.astropy.org/">astropy</a>.  Examples:<br>
 <em>123.4 56.7</em>: decimal degrees<br>
 <em>12:34:56 -12:34:56</em>: assumed hours, degrees<br>
-<em>12h34m56s -12d34m56s</em>: explicit units
-
+<em>12h34m56s -12d34m56s</em>: explicit units<br>
+Separate coordinates with whitespace or comma
 </div> 
 
  
