DM api is now working?

--- a/templates/compute.html
+++ b/templates/compute.html
@@ -65,6 +65,7 @@ id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
 <!-- <input type="submit" value="Search" class="btn btn-success"> -->
 <!-- <input type="submit" value="API" class="btn btn-success"> -->
 {{ form.compute(class='button button1') }}
+{{ form.api(class="button button2") }}
 {{ form.clear(class="button button3") }}
         </p>
  
