added contact info for DM computation as well

--- a/templates/compute.html
+++ b/templates/compute.html
@@ -97,6 +97,16 @@ href="https://www.astropy.org/">astropy</a>.  Examples:<br>
 <em>12h34m56s -12d34m56s</em>: explicit units<br>
 Separate coordinates with whitespace or comma
 
+<hr>
+Feedback: submit a <a
+href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
+issue</a> or <a href="mailto:kaplan@uwm.edu">email</a>
+<br>
+Citation: if you found this useful in your research, please contact <a
+href="mailto:kaplan@uwm.edu">David Kaplan</a> or submit a <a
+href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
+issue</a>.
+
 </div>
 
 {% endblock %}
