--- a/templates/search.html
+++ b/templates/search.html
@@ -80,6 +80,10 @@ id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
 {{ form.search(class="button button1") }}
 {{ form.api(class="button button2") }}
 {{ form.clear(class="button button3") }}
+{{form.deduplicate(class='toggle on',
+**{'data-toggle':"toggle",'data-off':'Keep Duplicates',
+'data-on':"Hide Duplicates", 'data-onstyle':"default",
+'data-offstyle':"info",'data-width': "15%",'data-height': "5%"})}}
         </p>
  
  
