added ability to download

--- a/templates/search.html
+++ b/templates/search.html
@@ -80,7 +80,9 @@ id="gal-l-symbol">&#x2113</i> <i id="gal-b-symbol">b)</i>',
 {{ form.search(class="button button1") }}
 {{ form.api(class="button button2") }}
 {{ form.clear(class="button button3") }}
-        </p>
+{{ form.PDF(class="button button1") }}
+{{ form.PNG(class="button button1") }}
+</p>
  
  
  
