--- a/templates/compute.html
+++ b/templates/compute.html
@@ -129,6 +129,8 @@ Citation: if you found this useful in your research, please contact <a
 href="mailto:kaplan@uwm.edu">David Kaplan</a> or submit a <a
 href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
 issue</a>.
+<br>
+Thanks to Juan Lebron for assistance with the scintillation calculation.
 
 </div>
 
