--- a/templates/search.html
+++ b/templates/search.html
@@ -139,7 +139,8 @@ issue</a> or <a href="mailto:kaplan@uwm.edu">email</a>
 Citation: if you found this useful in your research, please contact <a
 href="mailto:kaplan@uwm.edu">David Kaplan</a> or submit a <a
 href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
-issue</a>.
+issue</a>. <a href="https://doi.org/10.5281/zenodo.6390905"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.6390905.svg" alt="DOI"></a>
+
 
 </div> 
 
