--- a/templates/compute.html
+++ b/templates/compute.html
@@ -129,6 +129,7 @@ Citation: if you found this useful in your research, please contact <a
 href="mailto:kaplan@uwm.edu">David Kaplan</a> or submit a <a
 href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
 issue</a>.
+<a href="https://doi.org/10.5281/zenodo.6390905"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.6390905.svg" alt="DOI"></a>
 <br>
 Thanks to Juan Lebron for assistance with the scintillation calculation.
 
