--- a/templates/search.html
+++ b/templates/search.html
@@ -136,11 +136,13 @@ Feedback: submit a <a
 href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
 issue</a> or <a href="mailto:kaplan@uwm.edu">email</a>
 <br>
-Citation: if you found this useful in your research, please contact <a
+Citation: if you found this useful in your research, please cite <a
+href="https://ascl.net/2210.001"><img
+src="https://img.shields.io/badge/ascl-2210.001-blue.svg?colorB=262255"
+alt="ascl:2210.001" /></a>.  If you find any errors or omissions please contact <a
 href="mailto:kaplan@uwm.edu">David Kaplan</a> or submit a <a
 href="https://github.com/dlakaplan/pulsarsurveyscraper/issues">github
-issue</a>. <a href="https://doi.org/10.5281/zenodo.6390905"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.6390905.svg" alt="DOI"></a>
-
+issue</a>. 
 
 </div> 
 
